--- a/index.html
+++ b/index.html
@@ -10,29 +10,27 @@
     <div id="calc">
         <div class="container">
             <div class="display">324</div>
-        <div class="button-container">
-            <button class="clear">AC</button>
-            <button class="sign-change">+/-</button>
-            <button class="percent">%</button>
-            <button class="operator">/</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="operator">*</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="operator">-</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="operator">+</button>
-            <button class="number">0</button>
-            <button class="point">.</button>
-            <button class="equal">=</button>
-
-
-        </div>
+            <div class="button-container">
+                <button class="clear">AC</button>
+                <button class="sign-change">+/-</button>
+                <button class="percent">%</button>
+                <button class="operator">/</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="operator">*</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="operator">-</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="operator">+</button>
+                <button class="number" id="zero">0</button>
+                <button class="point">.</button>
+                <button class="equal">=</button>
+            </div>
         </div>
         
         
